tests/compile_fail/invalid_text_decoration_thickness_length_literal.rs
use surgeist_style::{Length, TextDecorationThicknessLength};

fn main() {
    let _thickness = TextDecorationThicknessLength(Length::Px(1.0));
}
